--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ Algorithm\
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+# Etc
 .idea
 out
 *.iml
